--- a/OpenCV-Workshop.ipynb
+++ b/OpenCV-Workshop.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "## Reading an image\n",
     "\n",
-    "sign = cv2.imread(\"Traffic Sign Detection\\Test_02\\Speed Limit.jpg\",1)"
+    "sign = cv2.imread(\"Images\\Speed Limit.jpg\",1)"
    ]
   },
   {
@@ -80,7 +80,7 @@
     "## Writing an image\n",
     "\n",
     "arr = np.zeros((400,400), np.uint8)\n",
-    "cv2.imwrite(\"Traffic Sign Detection\\Test_02\\Test-image-1.jpg\",arr)"
+    "cv2.imwrite(\"Images\\Test-image-1.jpg\",arr)"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "source": [
     "## Detecting lines in an image\n",
     "\n",
-    "image = cv2.imread(\"Traffic Sign Detection\\Test_02\\Railwaylines.jpg\")\n",
+    "image = cv2.imread(\"Images\\Railwaylines.jpg\")\n",
     "#image = cv2.resize(image, (700,700), cv2.INTER_NEAREST)\n",
     "print(type(image))\n",
     "gray = cv2.cvtColor(image, cv2.COLOR_RGB2GRAY)\n",
@@ -388,7 +388,7 @@
    "source": [
     "## Detecting polygons in an image\n",
     "\n",
-    "img = cv2.imread(\"Traffic Sign Detection\\Test_02\\Railwaylines.jpg\")\n",
+    "img = cv2.imread(\"Images\\Railwaylines.jpg\")\n",
     "\n",
     "copied = img.copy()\n",
     "gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
